$Id$

version ? (??/??/????):

  - BTS#0000426: fixed value in contrib/formularz_przelewu_wplaty (alec)
  - BTS#0000428: fixed misprint in polish translation (alec)
  - BTS#0000420: fixed tax/net calculations in Sale Registry (alec)

version 1.6.3 Laira <security release> (19/08/2005):

  - BTS#0000421: fixed icon and description in Nodes -> Print (alec)
  - BTS#0000422: fixed js function CheckAll() (alec)
  - lmsd/cutoff: fixed date in warning (alec/Tomek Rydzynski)
  - lmsd/pinger: increased MAXIFN (max interfaces number) to 1024 (alec)
  - BTS#0000423: fixed date change links on events list (alec)
  - security bugfix: plain text passwords aren't stored in session (alec)
  - security bugfix: session is excluded from database backup (alec)
      
version 1.6.2 Desala (09/08/2005):

  - fixed SQL query in Mailing with network filtering (alec)
  - BTS#0000407: fixed page number saving in netdevices list (alec/MadMark)
  - fixed payment day on Payment Info (alec)
  - BTS#0000413: fixed payments accounting on Payments List (endrju/alec)
  - lmsd/payments: fixed subscription period calculation (alec)
  - BTS#0000419: added 'Mime-Version: 1.0' header for all, not only multipart
    messages (alec)
  - documentation is opened in new browser window (alec)
  - bugfix: add attachement file to new message in helpdesk with enabled
    helpdesk_backend_mode (alec)
  - added english translation of Timetable chapter in doc (kondi)

version 1.6.1 Ishta (11/07/2005):

  - BTS#0000387: fixed problem with register_globals=on in accesstable.php
    (alec/chris)
  - lmsd: added -fPIC flag for x86-64 architecture (alec)
  - contrib/customer_otherip: fixed problem with non-numeric input data
    on login form (alec)
  - lms-payments: fixed problem with DBD execute() and binding not needed 
    variables (alec)
  - BTS#0000384: upgraded OverLIB to 4.17 - fixed tooltips positioning (alec)
  - critical bug: SESSION::remove() doesn't update session, so after restore