@@ -457,4 +457,18 @@ $menu = array(
 		),
 	);
 
+if(($_CONFIG['directories']['userpanel_dir']))
+{
+	// be sure that Userpanel exists
+	if(file_exists($_CONFIG['directories']['userpanel_dir']."/lib/Userpanel.class.php"))
+		foreach($menu as $idx => $menuitem)
+			if($menuitem['name'] == trans('Administration'))
+				$menu[$idx]['submenu'][] =  
+					array(
+						'name' => trans('Userpanel'),
+						'link' => '?m=userpanel',
+						'tip' => trans('Userpanel configuration')
+					    );
+}
+
 ?>
